--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Miguel Won, Filipa Raimundo, and Bruno Martins, <i>Automatic extraction of relevant keyphrases for the study of issue competition<i/>, Proceedings of the International Conference on Computational Linguistics and Intelligent Text Processing, 2019 [<a href="">PDF</a>]</li>
 <li>Frederico Rodrigues, Ricardo Ribeiro, and Bruno Martins, <i>Neural Methods for Cross-Lingual Sentence Compression</i>, Proceedings of the International Conference on Artificial Intelligence: Methodology, Systems, Applications, 2018 [<a href="">PDF</a>]</li>
 <li>Nuno Ramanlal, Luís Freixinho, João Monteiro, Patricia Murrieta-Flores, João Moura Pires, and Bruno Martins, <i>Machine Learning for Processing of Historical Photos Envisioning Spatial Humanities Applications</i>, Proceedings of the Spatial Humanities Conference, 2018 [<a href="">PDF</a>]</li>
 <li>Raquel Liceras-Garrido, Bruno Martins, and Patricia Murrieta-Flores, <i>Development of an Historical Place-Name Gazetteer for the Viceroyalty of New Spain</i>, Proceedings of the Spatial Humanities Conference, 2018 [<a href="">PDF</a>]</li>
