--- a/index.html
+++ b/index.html
@@ -320,10 +320,11 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>Luís Borges, Bruno Martins, and Pavel Calado <i>Combining Similarity Features and Deep Representation Learning for Stance Detection in the Context of Checking Fake News</i>, ACM Journal of Data and Information Quality, 2018 [<a href="">PDF</a>]</li>
-<li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>Deep Neural Models for ICD-10 Coding of Death Certificates and Autopsy Reports in Free-Text</i>, Journal of Biomedical Informatics, 2018 [<a href="https://doi.org/10.1016/j.jbi.2018.02.011">PDF</a>]</li>
-<li>Miguel Won, Patricia Murrieta-Flores, and Bruno Martins <i>Ensemble NER: Evaluating Named Entity Recognition Tools in the Identification of Place Names in Historical Corpora</i>, Frontiers in Digital Humanities, 2018 [<a href="https://www.frontiersin.org/articles/10.3389/fdigh.2018.00002/abstract">PDF</a>]</li>	
-<li>João Monteiro, Bruno Martins, and João M. Pires <i>A Hybrid Approach for the Spatial Disaggregation of Socio-Economic Indicators</i>, International Journal of Data Science and Analytics, 2018 [<a href="http://dx.doi.org/10.1007/s41060-017-0080-z">PDF</a>]</li>
+<li>Jorge Fernandes, Miguel Won, Bruno Martins, <i>The Use of Speechmaking to Cultivate the Selectoral Connection in Non-Preferential Electoral Systems</i>, Comparative Political Studies, 2019 [<a href="">PDF</a>]</li>			
+<li>Luís Borges, Bruno Martins, and Pavel Calado, <i>Combining Similarity Features and Deep Representation Learning for Stance Detection in the Context of Checking Fake News</i>, ACM Journal of Data and Information Quality, 2019 [<a href="">PDF</a>]</li>
+<li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva, <i>Deep Neural Models for ICD-10 Coding of Death Certificates and Autopsy Reports in Free-Text</i>, Journal of Biomedical Informatics, 2018 [<a href="https://doi.org/10.1016/j.jbi.2018.02.011">PDF</a>]</li>
+<li>Miguel Won, Patricia Murrieta-Flores, and Bruno Martins, <i>Ensemble NER: Evaluating Named Entity Recognition Tools in the Identification of Place Names in Historical Corpora</i>, Frontiers in Digital Humanities, 2018 [<a href="https://www.frontiersin.org/articles/10.3389/fdigh.2018.00002/abstract">PDF</a>]</li>	
+<li>João Monteiro, Bruno Martins, and João M. Pires, <i>A Hybrid Approach for the Spatial Disaggregation of Socio-Economic Indicators</i>, International Journal of Data Science and Analytics, 2018 [<a href="http://dx.doi.org/10.1007/s41060-017-0080-z">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores, Pável Calado, and Bruno Martins, <i>Toponym Matching Through Deep Neural Networks</i>, International Journal of Geographical Information Science, 2017 [<a href="http://www.tandfonline.com/doi/full/10.1080/13658816.2017.1390119">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores, and Bruno Martins, <i>Combining Multiple String Similarity Metrics for Effective Toponym Matching</i>, International Journal of Digital Earth, 2017 [<a href="http://dx.doi.org/10.1080/17538947.2017.1371253">PDF</a>]</li>		
 <li>Fernando Melo, and Bruno Martins, <i>Automated Geocoding of Textual Documents: A Survey of Current Approaches</i>, Transactions in GIS, vol. 21, no. 1, 2017 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/tgis.12212/full">PDF</a>]</li>
@@ -530,6 +531,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST (<i>ongoing</i>)</li> 
 			<li>João Monteiro, <i>Mining multi-source and multi-modal geo-referenced information</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
 			<li>Cláudio Haupt Vieira, <i>Computational methods to identify and forecast anxiety</i>, IST (<i>ongoing co-supervision with Dr. Joana Gonçalves-Sá</i>)</li>
+			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
@@ -665,6 +667,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of editorial committees: </strong>
+						<a href="">SPRS IJGI - Special Issue on Geographic Information Extraction and Retrieval</a> |
 						<a href="http://theholmoak.com/journal/vgi">Volunteered Geographic Information - Thematic Issue</a> |
 						<a href="">GeoJournal - Special Issue on Spatial Humanities</a> |
 						<a href="http://explore.tandfonline.com/pages/cfp/tgis-spatial-computing-3q2017?utm_source=CPB&utm_medium=cms&utm_campaign=JMG01510">International Journal of Geographical Information Science - Special Issue on Spatial Computing for the Digital Humanities</a> |
