--- a/index.html
+++ b/index.html
@@ -681,6 +681,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.tpdl.eu/tpdl2019/">TPDL'19</a> |
 						<a href="http://www.acl2019.org/EN/index.xhtml">ACL'19</a> |
 						<a href="https://splu-robonlp.github.io">SpLU-RoboNLP 2019</a> |
 						<a href="http://www.kdd.org/kdd2019/">KDD'19</a> |
