--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://dh2019.adho.org/">DH'19</a> |
 						<a href="http://sociocom.jp/~event/uistda2019/index.php">UISTDA'19</a> |
 						<a href="http:/aaai.org/Conferences/AAAI-19/">AAAI'19</a> |
-						<a href="http://ecir2019.org">ECIR'19</a> |
+						<a href="http://ecir2019.org">ECIR'19</a> (Recognized Reviewer Award) |
 						<a href="http://www.sigapp.org/sac/sac2019/">SAC'19</a> |
 						<a href="http://dsaa2018.isi.it/program/special-sessions/en-geo-data">IEEE DSAA'18 - EnGeoData</a> |
 						<a href="http://www.spur.uzh.ch/de/veranstaltungen/workshops/2018/Corpus-in-GIScience-Going-Beyond-Butterfly-Collecting.html">Corpus in GIS Science</a> |
