--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="">GeoAI'19</a> |
 						<a href="">ECIR'20</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'19</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'18</a> |
@@ -681,6 +682,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://sigspatial2019.sigspatial.org">SIGSPATIAL'19</a> |
 						<a href="http://dsaa2019.dsaa.co">IEEE DSAA'19</a> |
 						<a href="http://www.tpdl.eu/tpdl2019/">TPDL'19</a> |
 						<a href="http://www.acl2019.org/EN/index.xhtml">ACL'19</a> |
