--- a/index.html
+++ b/index.html
@@ -682,6 +682,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.emnlp-ijcnlp2019.org">EMNLP'19</a> |
 						<a href="http://sigspatial2019.sigspatial.org">SIGSPATIAL'19</a> |
 						<a href="http://dsaa2019.dsaa.co">IEEE DSAA'19</a> |
 						<a href="http://www.tpdl.eu/tpdl2019/">TPDL'19</a> |
