--- a/index.html
+++ b/index.html
@@ -436,7 +436,6 @@ involved in several research projects related to geospatial aspects in informati
 <li>José Borbinha, Nuno Freire, Mário J. Silva, and Bruno Martins, <i>InterNet Search Engines and OPACs: Getting the best of two worlds</i>, Proceedings of the ICCC/IFIP International Conference on Electronic Publishing, 2003 [<a href="papers/paper.pdf">PDF</a>] </li>
 <li>Bruno Martins and Mário J. Silva, <i>Web Information Retrieval with Result Set Clustering</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2003 [<a href="papers/paper.pdf">PDF</a>] </li>
 <li>Bruno Martins ans Mário J. Silva, <i>Is it Portuguese? Language detection in large document collections</i>, Actas da Conferência Nacional sobre Redes de Computadores, 2001 [<a href="papers/paper.pdf">PDF</a>] </li>
-
 			</ul>
 
 			<h3>Book Chapters</h3>
@@ -629,10 +628,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Veniamin Craciun, <a href=""><i>Sistema de Recomendação em Análise de Risco em Saúde Mental Pediátrica</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
 			<li>Jorge Pereira, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
 
-			<li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> <!-- ?? valores -->	
+			<li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> <!-- ?? valores -->
 			<li>Didier Dias, <a href=""><i>Classificação de solos com técnicas de aprendizagem automática</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->	
-			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para classificação do terreno</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->	
-			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->	
+			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para classificação do terreno</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
+			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
+
+			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
