--- a/index.html
+++ b/index.html
@@ -824,6 +824,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
