--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ involved in several research projects related to geospatial aspects in informati
 			
 			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
 			<!-- <li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->				
-			<!-- <li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> --> <!-- ?? valores -->
+			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 15 valores -->
 			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2018 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2018 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
@@ -858,8 +858,8 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="DEI-DAVID-PROJECTO">David Calhas</a> |
 						<a href="DEI-DAVID-PROJECTO">João Raposo</a> |
 
-						<a href="DEI-ANDRE-PROJECTO">Inês Ferreira</a> |
-						<a href="DEI-LUISA-PROJECTO">Ricardo Rei</a> |
+						<a href="DEI-ANDRE">Inês Ferreira</a> |
+						<a href="DEI-LUISA">Ricardo Rei</a> |
 						
 						<a href="FCTUNL-JOAO">Gonçalo Marcelino</a> |
 						<a href="DEI-ALVESMARQUES">Rui Santos</a> |
