--- a/index.html
+++ b/index.html
@@ -610,11 +610,11 @@ involved in several research projects related to geospatial aspects in informati
 			
 			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
 			<!-- <li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->				
-			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 15 valores -->
-			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2018 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
-			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
-			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2018 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
-			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2018 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
+			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 15 valores -->
+			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2019 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
+			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2019 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
+			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2019 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 
 			<li>Ana Bárbara Cardoso, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
@@ -629,10 +629,11 @@ involved in several research projects related to geospatial aspects in informati
 
 			<!-- <li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> <!-- ?? valores --> -->
 			<li>Didier Dias, <a href=""><i>Classificação de solos com técnicas de aprendizagem automática</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->	
-			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para classificação do terreno</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
+			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para geocodificação de imagens</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
 			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
 
 			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Henrique Almeida, <a href=""><i>Mapping Urban Areas Leveraging the Analysis of Ground-Level Imagery with Convolutional Neural Networks</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
