--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Danielle Caled, Miguel Won, Bruno Martins, and Mário J. Silva, <i>A Hierarchical Label Network for Multi-Label EuroVoc Classification of Legislative Contents</i>, Proceedings of the International Conference on Theory and Practice of Digital Libraries, 2019 [<a href="">PDF</a>]</li>
+<li>Pedro Gomes, Bruno Martins, and Luís Cruz, <i>Segmenting User Sessions in Search Engine Query Logs Leveraging Word Embeddings</i>, Proceedings of the International Conference on Theory and Practice of Digital Libraries, 2019 [<a href="">PDF</a>]</li>
 <li>Miguel Won, Filipa Raimundo, and Bruno Martins, <i>Automatic extraction of relevant keyphrases for the study of issue competition</i>, Proceedings of the International Conference on Computational Linguistics and Intelligent Text Processing, 2019 [<a href="">PDF</a>]</li>
 <li>Frederico Rodrigues, Ricardo Ribeiro, and Bruno Martins, <i>Neural Methods for Cross-Lingual Sentence Compression</i>, Proceedings of the International Conference on Artificial Intelligence: Methodology, Systems, Applications, 2018 [<a href="">PDF</a>]</li>
 <li>Nuno Ramanlal, Luís Freixinho, João Monteiro, Patricia Murrieta-Flores, João Moura Pires, and Bruno Martins, <i>Machine Learning for Processing of Historical Photos Envisioning Spatial Humanities Applications</i>, Proceedings of the Spatial Humanities Conference, 2018 [<a href="">PDF</a>]</li>
