--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Nelson Nunes, Bruno Martins, Nuno André da Silva, Francisca Leite, and Mário J. Silva, <i>A Multi-Modal Deep Learning Method for Classifying Chest Radiology Exams</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2019 [<a href="">PDF</a>]</li>
+<li>Didier Dias, Bruno Martins, João Pires, Luis de Sousa, Jacinto Estima, and Carlos Damásio, <i>Soil Classification Based on Physical and Chemical Properties Using Random Forests</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2019 [<a href="">PDF</a>]</li>
+<li>Ana Cardoso, Bruno Martins, and Jacinto Estima, <i>Using Recurrent Neural Networks for Toponym Resolution in Text</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2019 [<a href="">PDF</a>]</li>
+<li>Maria Dias, João Monteiro, Joel Silva, Jacinto Estima, and Bruno Martins, <i>Semantic Segmentation of High-Resolution Aerial Imagery with W-Net Models</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2019 [<a href="">PDF</a>]</li>
 <li>Danielle Caled, Miguel Won, Bruno Martins, and Mário J. Silva, <i>A Hierarchical Label Network for Multi-Label EuroVoc Classification of Legislative Contents</i>, Proceedings of the International Conference on Theory and Practice of Digital Libraries, 2019 [<a href="">PDF</a>]</li>
 <li>Pedro Gomes, Bruno Martins, and Luís Cruz, <i>Segmenting User Sessions in Search Engine Query Logs Leveraging Word Embeddings</i>, Proceedings of the International Conference on Theory and Practice of Digital Libraries, 2019 [<a href="">PDF</a>]</li>
 <li>Miguel Won, Filipa Raimundo, and Bruno Martins, <i>Automatic extraction of relevant keyphrases for the study of issue competition</i>, Proceedings of the International Conference on Computational Linguistics and Intelligent Text Processing, 2019 [<a href="">PDF</a>]</li>
