--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Nádia Fernandes, <a href=""><i>Co-Reference Resolution in Portuguese and Spanish Texts</i></a>, IST, 2019 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2019 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
 			<li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2019 (<i>co-supervised with Miguel Costa</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
