--- a/index.html
+++ b/index.html
@@ -615,7 +615,6 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rafael Miranda, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1409728525632106"><i>Deep learning para classificação automática de notas de alta hospitalar segundo códigos ICD10</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 18 valores -->
 			
 			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
-			<!-- <li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->				
 			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 15 valores -->
 			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2019 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
@@ -644,6 +643,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2019 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
 			<li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2019 (<i>co-supervised with Miguel Costa</i>)</li> <!-- ?? valores -->
+			<li>Bruno Magalhães, <a href=""><i>Integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->								
 			</ul>
 		</td>
     </tr>
