--- a/index.html
+++ b/index.html
@@ -661,8 +661,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="">GeoAI'19</a> |
-						<a href="">ECIR'20</a> |
+						<a href="https://ecir2020.org">ECIR'20</a> |
+						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'18</a> |
+						<a href="https://udi.ornl.gov/geoai2019">GeoAI'19</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'19</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'18</a> |
 						<a href="http://lxmls.it.pt/2018/">LxMLS'18</a> |
@@ -695,6 +696,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="">MAISoN'19</a> |
 						<a href="https://nodalida2019.org">NoDaLiDa’19</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir19/">GIR'19</a> |
 						<a href="https://www.emnlp-ijcnlp2019.org">EMNLP'19</a> |
