--- a/index.html
+++ b/index.html
@@ -613,14 +613,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Paulo Alves, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/846778572212108"><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- 19 valores -->
 			<li>Nuno Ramanlal, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479054322"><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2018 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- 17 valores -->
 			<li>Rafael Miranda, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1409728525632106"><i>Deep learning para classificação automática de notas de alta hospitalar segundo códigos ICD10</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 18 valores -->
-			
-			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
 			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 15 valores -->
-			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2019 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
-			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2019 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 18 valores -->
+			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 17 valores -->
 			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2019 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- 18 valores -->
-			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2019 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
+			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2019 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- 17 valores -->
 
+			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
 			<li>Ana Bárbara Cardoso, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Nelson Nunes, <a href=""><i>Deep learning para classificação automática de relatórios de radiologia</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->			
