--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Cardoso, <a href=""><i>Deep Learning for the Automatic Generation of Medical Imaging Reports</i></a>, IST, 2019 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
 			<li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2019 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- ?? valores -->
-			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aereal Photos</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2019 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
