--- a/index.html
+++ b/index.html
@@ -458,7 +458,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Other Publications</h3>
 
 			<ul>
-<li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2018 Workshop Report</i>, SIGSPATIAL Special, 2018 [<a href="">PDF</a>]</li>	
+<li>Patricia Murrieta-Flores and Bruno Martins, <i>The geospatial humanities: past, present and future</i>, International Journal of Geographical Information Science, 2019 [<a href="http://10.1080/13658816.2019.1645336">PDF</a>]</li>	
+<li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2018 Workshop Report</i>, SIGSPATIAL Special, 2018 [<a href="https://dl.acm.org/citation.cfm?id=3307610">PDF</a>]</li>	
 <li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2017 Workshop Report</i>, SIGSPATIAL Special, 2017 [<a href="https://dl.acm.org/citation.cfm?id=3178406">PDF</a>]</li>				
 <li>Dirk Ahlers, Erik Wilde, and Bruno Martins, <i>Report on the Fifth Workshop on Location and the Web (LocWeb 2015)</i>, SIGIR Forum, vol. 49, no. 2, 2015 [<a href="http://sigir.org/files/forum/2015D/p123.pdf">PDF</a>]</li>
 <li>Dirk Ahlers, Erik Wilde, and Bruno Martins, <i>Report on the Fourth Workshop on Location and the Web (LocWeb 2014)</i>, SIGIR Forum, vol. 49, no. 1, 2015 [<a href="http://sigir.org/files/forum/2015J/p035.pdf">PDF</a>]</li>
