--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>João Monteiro, Bruno Martins, Patricia Murrieta-Flores, and João M. Pires, <i>Spatial Disaggregation of Historical Census Data Leveraging Multiple Sources of Ancillary Information</i>, ISPRS International Journal of Geo-Information, 2019 [<a href="">PDF</a>]</li>
+<li>João Monteiro, Bruno Martins, Patricia Murrieta-Flores, and João M. Pires, <i>Spatial Disaggregation of Historical Census Data Leveraging Multiple Sources of Ancillary Information</i>, ISPRS International Journal of Geo-Information, 2019 [<a href="https://www.mdpi.com/2220-9964/8/8/327">PDF</a>]</li>
 <li>Ricardo A. Silva, João M. Pires, Nuno Datia, Maribel Y. Santos, Bruno Martins, and Fernando Birra, <i>Visual Analytics for Spatio-Temporal Events</i>, Multimedia Tools and Applications, 2019 [<a href="">PDF</a>]</li>
 <li>Jorge Fernandes, Miguel Won, and Bruno Martins, <i>Speechmaking and the Selectorate: Persuasion in Nonpreferential Electoral Systems</i>, Comparative Political Studies, 2019 [<a href="https://journals.sagepub.com/doi/abs/10.1177/0010414019858964">PDF</a>]</li>
 <li>Luís Borges, Bruno Martins, and Pavel Calado, <i>Combining Similarity Features and Deep Representation Learning for Stance Detection in the Context of Checking Fake News</i>, ACM Journal of Data and Information Quality, vol. 11, no.3, 2019 [<a href="https://dl.acm.org/citation.cfm?id=3287763">PDF</a>]</li>
@@ -652,7 +652,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2019 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- ?? valores -->
 			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2019 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- ?? valores -->
-			<li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2019 </li> <!-- ?? valores -->			
+			<li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2019 </li> <!-- ?? valores -->
+			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2019 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
