--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of editorial committees: </strong>
-						<!-- <a href="https://www.mdpi.com/journal/ijgi">ISPRS International Journal of Geo-Information</a> |
-						<a href="">ISPRS IJGI - Special Issue on Geospatial Artificial Intelligence</a> | -->
+						<a href="https://www.mdpi.com/journal/ijgi">ISPRS International Journal of Geo-Information</a> |
+						<!-- <a href="">ISPRS IJGI - Special Issue on Geospatial Artificial Intelligence</a> | -->
 						<a href="https://www.mdpi.com/journal/ijgi/special_issues/Geoinformation_Extraction_Retrieval">ISPRS IJGI - Special Issue on Geographic Information Extraction and Retrieval</a> |
 						<a href="http://theholmoak.com/journal/vgi">Volunteered Geographic Information - Thematic Issue</a> |
 						<a href="">GeoJournal - Special Issue on Spatial Humanities</a> |
