--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>MOnitoring Outbreak events for Disease surveillance in a data science context (MOOD - H2020-SC1-BHC-2018-2020 874850)</li>
 <li>A Machine Learning-Based Forecasting System for Shellfish Safety (MATISSE - FCT DSAIPA/DS/0026/2019)</li>
 <li>Factors to promote healthy dialogue and behaviours in online school communities (HEALTI.CO - FCT DSAIPA/DS/0102/2019)</li>
 <li>Asistentes Inteligentes para las Infraestructuras de Datos Espaciales (IDEAIS - Red CYTED)</li>
