--- a/index.html
+++ b/index.html
@@ -709,8 +709,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://aaai.org/Conferences/AAAI-20/">AAAI'20</a> |
 						<a href="https://www.sigapp.org/sac/sac2020/index.html">SAC'20</a> |
-						<a href="">MAISoN'19</a> |
+						<a href="https://www.maisonworkshop.org">MAISoN'19</a> |
 						<a href="https://nodalida2019.org">NoDaLiDa’19</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir19/">GIR'19</a> |
 						<a href="https://www.emnlp-ijcnlp2019.org">EMNLP'19</a> |
