--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Bruno Martins | Instituto Superior Técnico, University of Lisbon</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="Keywords" content="Bruno Martins, Technical University of Lisbon" />
+	<meta name="Keywords" content="Bruno Martins, Bruno Emanuel Martins, IST, University of Lisbon" />
 	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />
