--- a/index.html
+++ b/index.html
@@ -672,6 +672,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="epia2020.inesc-id.pt">EPIA'20</a> |
+						<a href="">EAMT'20</a> |
 						<a href="https://ecir2020.org">ECIR'20</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'19</a> |
 						<a href="https://udi.ornl.gov/geoai2019">GeoAI'19</a> |
@@ -709,6 +711,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://acl2020.org">ACL'20</a> |
 						<a href="https://aaai.org/Conferences/AAAI-20/">AAAI'20</a> |
 						<a href="https://www.sigapp.org/sac/sac2020/index.html">SAC'20</a> |
 						<a href="https://www.maisonworkshop.org">MAISoN'19</a> |
