--- a/index.html
+++ b/index.html
@@ -673,8 +673,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="epia2020.inesc-id.pt">EPIA'20</a> |
-						<a href="">EAMT'20</a> |
+						<a href="http://epia2020.inesc-id.pt">EPIA'20</a> |
+						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
 						<a href="https://ecir2020.org">ECIR'20</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'19</a> |
 						<a href="https://udi.ornl.gov/geoai2019">GeoAI'19</a> |
