--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Other Publications</h3>
 
 			<ul>
+<li>Bruno Martins, Ludovic Moncla, and Patricia Murrieta-Flores, <i>GeoHumanities 2019 Workshop Report</i>, SIGSPATIAL Special, 2019 [<a href="">PDF</a>]</li>	
 <li>Patricia Murrieta-Flores and Bruno Martins, <i>The geospatial humanities: past, present and future</i>, International Journal of Geographical Information Science, 2019 [<a href="https://www.tandfonline.com/doi/full/10.1080/13658816.2019.1645336">PDF</a>]</li>	
 <li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2018 Workshop Report</i>, SIGSPATIAL Special, 2018 [<a href="https://dl.acm.org/citation.cfm?id=3307610">PDF</a>]</li>	
 <li>Bruno Martins and Patricia Murrieta-Flores, <i>GeoHumanities 2017 Workshop Report</i>, SIGSPATIAL Special, 2017 [<a href="https://dl.acm.org/citation.cfm?id=3178406">PDF</a>]</li>				
