--- a/index.html
+++ b/index.html
@@ -888,13 +888,14 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-DAVID">João Raposo</a> |
+						<a href="DEEC-PAOLO-ROMANO">Pedro Mendes</a> |
 						<a href="DEI-LUISA">Diogo Pinheiro</a> |
 						
 						<a href="DEI-ANDRE-PROJECTO">Mónica Valverde</a> |
 						<a href="DEI-SOFIA-PROJECTO">João Simão</a> |
 						<a href="DEI-LOPES-PROJECTO">Gonçalo Lopes</a> |
 						<a href="DEI-DAVID-PROJECTO">David Calhas</a> |
-						<a href="DEI-DAVID-PROJECTO">João Raposo</a> |
 
 						<a href="DEI-ANDRE-VASCONCELOS">Inês Ferreira</a> |
 						<a href="DEI-LUISA">Ricardo Rei</a> |
