--- a/index.html
+++ b/index.html
@@ -713,6 +713,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sites.google.com/view/siirh2020/">SIIRH'20</a> |
 						<a href="https://acl2020.org">ACL'20</a> |
 						<a href="https://aaai.org/Conferences/AAAI-20/">AAAI'20</a> |
 						<a href="https://www.sigapp.org/sac/sac2020/index.html">SAC'20</a> |
