--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
 			<li>Pedro Gomes, <a href=""><i>Processing query logs for identifying user sessions</i></a>, IST, 2019 (<i>co-supervised with Luís Borges</i>)</li> <!-- ?? valores -->
 			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>Veniamin Craciun, <a href=""><i>Construção de representações para conceitos extraídos desde textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
+			<li>Veniamin Craciun, <a href=""><i>Construção de representações para conceitos extraídos desde textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Manuel Lopes</i>)</li> <!-- 17 valores -->				
 			<li>Jorge Pereira, <a href=""><i>Uso de redes neuronais profundas e imagens geo-referenciadas para detecção de cheias</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
 
 			<!-- <li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> --> <!-- ?? valores -->
