--- a/index.html
+++ b/index.html
@@ -626,22 +626,21 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 17 valores -->
 			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2019 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- 18 valores -->
 			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2019 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- 17 valores -->
-
-			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
-			<li>Ana Bárbara Cardoso, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
-			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Ana Bárbara Cardoso, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- 18 valores -->
 			<li>Nelson Nunes, <a href=""><i>Deep learning para classificação automática de relatórios de radiologia</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 19 valores -->			
-			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2019 (<i>co-supervised with João Monteiro</i>)</li> <!-- ?? valores -->
 			<li>Maria Dias, <a href=""><i>Segmentação de fotografias aéreas com redes neuronais profundas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 19 valores -->
-			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
-			<li>Pedro Gomes, <a href=""><i>Processing query logs for identifying user sessions</i></a>, IST, 2019 (<i>co-supervised with Luís Borges</i>)</li> <!-- ?? valores -->
-			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Veniamin Craciun, <a href=""><i>Construção de representações para conceitos extraídos desde textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Manuel Lopes</i>)</li> <!-- 17 valores -->				
 			<li>Jorge Pereira, <a href=""><i>Uso de redes neuronais profundas e imagens geo-referenciadas para detecção de cheias</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 19 valores -->	
+			<li>Pedro Gomes, <a href=""><i>Processing query logs for identifying user sessions</i></a>, IST, 2019 (<i>co-supervised with Luís Cruz</i>)</li> <!-- 18 valores -->
+			<li>Didier Dias, <a href=""><i>Classificação de solos com técnicas de aprendizagem automática</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 18 valores -->	
+			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para geocodificação de imagens</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 17 valores -->
 
 			<!-- <li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> --> <!-- ?? valores -->
-			<li>Didier Dias, <a href=""><i>Classificação de solos com técnicas de aprendizagem automática</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 18 valores -->	
-			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para geocodificação de imagens</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
+			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
+			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Sofia Aparício, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2019 (<i>co-supervised with João Monteiro</i>)</li> <!-- ?? valores -->
+			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
+			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
 
 			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
