--- a/index.html
+++ b/index.html
@@ -659,6 +659,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2019 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- ?? valores -->
 			<li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2019 </li> <!-- ?? valores -->
 			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2019 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
+
+			<li>Isabel Coutinho, <a href=""><i>Classificação de texto clínico para auxiliar tarefas de codificação</i></a>, IST, 2019 (<i>co-supervised with Dr. João Leal</i>)</li> <!-- ?? valores -->
+			<li>Miguel Froes, <a href=""><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2019 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
